add email service and dataStorage service